# agg-cli

./: Cargo.toml  README.md
packaging/homebrew/: aag.rb.template
scripts/: package-release.sh  publish-homebrew-tap.sh  render-homebrew-formula.sh  sync-public.sh
src/: main.rs
src/modules/: api.rs  config.rs  crypto.rs  db.rs  mod.rs
