[package]
name = "aag"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
futures = "0.3.32"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tabled = { version = "0.20.0", features = ["macros", "ansi"] }
tiny_http = "0.12.0"
tokio = { version = "1.52.1", features = ["full"] }
unicode-width = "0.2"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.14.0", features = ["v4"] }
webbrowser = "1.2.1"
